[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/InventoryScene.gd" type="Script" id=1]
[ext_resource path="res://UI/InventoryGrid.gd" type="Script" id=2]

[node name="InventoryScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 25.0
margin_top = 170.0
margin_right = 65.0
margin_bottom = 210.0

[node name="InventoryGrid" type="GridContainer" parent="CenterContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
custom_constants/vseparation = -1
custom_constants/hseparation = -1
columns = 4
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Allfilter" type="Button" parent="VBoxContainer"]
margin_right = 81.0
margin_bottom = 20.0
text = "All"

[node name="Equipmentfilter" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 81.0
margin_bottom = 44.0
text = "Equipment"

[node name="Temporaryfilter" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 81.0
margin_bottom = 68.0
text = "Temporary"

[node name="Food" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 81.0
margin_bottom = 92.0
text = "Food"

[connection signal="pressed" from="VBoxContainer/Allfilter" to="." method="_on_Allfilter_pressed"]
[connection signal="pressed" from="VBoxContainer/Equipmentfilter" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Temporaryfilter" to="." method="_on_Temporaryfilter_pressed"]
[connection signal="pressed" from="VBoxContainer/Food" to="." method="_on_Food_pressed"]
